--- a/webPanel/index.html
+++ b/webPanel/index.html
@@ -20,7 +20,7 @@
             	var image = $("body");
 
 			   image.fadeOut(1000, function () {
-                image.css("background-image", "url('http://pujangga0709.files.wordpress.com/2012/08/background-photofolic1.png')");
+                image.css("background-image", "url('"+chargeData()+"')");
 	   		   image.fadeIn(1000);});
 
 
